--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,11 @@
 plugins {
     id 'java'
-    // id 'application'
+    id 'application'
 }
 
-// application {
-//     mainClass = 'com.red_nosed_reports.main.MainRedNosedReports'
-// }
+application {
+    mainClass = 'com.red_nosed_reports.main.MainRedNosedReports'
+}
 
 group = 'com.red_nosed_reports'
 version = '1.0-SNAPSHOT'
@@ -26,4 +26,12 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+jar {
+    manifest {
+        attributes(
+            'Main-Class': application.mainClass
+        )
+    }
 }
